manifests/seraphim/gateway/Gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: internal
  namespace: gateway
spec:
  gatewayClassName: agentgateway
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.10.21.11
  listeners:
    - allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      hostname: '*.vegapunk.cloud'
      name: cloud-vegapunk-apps-https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: cloud-vegapunk-apps-tls
        mode: Terminate
